Changed config to use commands

--- a/config.json
+++ b/config.json
@@ -1,7 +1,25 @@
 {
     "starters": [{
         "name": "typescript-library-starter",
-        "repo": "git@github.com:alexjoverm/typescript-library-starter.git",
-        "type": "node"
+        "command": "git clone git@github.com:alexjoverm/typescript-library-starter.git {{name}}",
+        "install": [
+            "npm install"
+        ]
+    }, {
+        "name": "express-webpack-starter",
+        "command": "git clone git@github.com:bananpeng98/express-webpack-starter.git {{name}}",
+        "install": [
+            "npm install"
+        ]
+    }, {
+        "name": "webpack-starter",
+        "command": "git clone git@github.com:bananpeng98/webpack-starter.git {{name}}",
+        "install": [
+            "npm install"
+        ]
+    }, {
+        "name": "react-typescript-starter",
+        "command": "create-react-app {{name}} --scripts-version=react-scripts-ts",
+        "install": []
     }]
 }
